[tool.poetry]
name = "buttery-biscuit-base"
version = "0.1.0"
description = ""
authors = ["dthelegend <me@daudi.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^12.0"
curtsies = "^0.4.2"
fire = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
