[tool.poetry]
name = "cream-cheese"
version = "0.1.0"
description = ""
authors = ["dthelegend <me@daudi.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git"}
opencv-python = "^4.9.0.80"
websockets = "^12.0"
fastapi = {extras = ["all"], version = "^0.110.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
